Completed "Edit Feature"

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,5 +7,7 @@
     <string name="add_hint">Add a new item</string>
     <string name="add_button_label">Add</string>
     <string name="new_entry_label">Enter new item</string>
+    <string name="title_activity_edit_item">EditItemActivity</string>
+    <string name="update_item_btn_label">Save</string>
 
 </resources>
